--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html,body {
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+  color: #2F2F2F;
+}
+
+a {
+  text-decoration: none;
+}
+
 .App {
   display: grid;
   grid-template-columns: 1fr 216px 540px 324px 1fr;
@@ -54,6 +63,13 @@
 #subscribeContainer {
   grid-area: subscribe;
   padding-left: 32px;
+}
+
+#topicsList a{
+  display: block;
+  cursor: pointer;
+  padding: 5px 0;
+  white-space: nowrap;
 }
 
 .thumb {
