--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,55 @@
+html,body,div,span,h1,h2,h3,h4,h5,h6,p,a,em,ul,ol,li,img,small,strong,fieldset,form,label,legend,article,aside,footer,header,nav,section {
+  /* margin: 0; */
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
 html,body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
   color: #2F2F2F;
+  font-weight: 300;
 }
 
 a {
   text-decoration: none;
+  color: #2F2F2F
+}
+
+a:hover {
+  color: #f60;
+}
+
+h1, h2 {
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 8px;
+  font-weight: 400;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #797979;
+  margin-bottom: 24px
+}
+
+input {
+  height: 36px;
+  line-height: 36px;
+  padding: 0 8px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #D5D5D5;
+  background: #fff;
+  box-sizing: border-box;
+  font-size: 14px
+}
+
+input:focus {
+  outline: none
 }
 
 .App {
@@ -90,4 +135,17 @@ a {
 
 #topicsList .subTopicNav {
   padding-left: 16px;
+}
+
+#subscribeContainer form input[type="submit"] {
+  cursor: pointer;
+  background: #f60;
+  color: #fff;
+  border: none;
+}
+
+#subscribeContainer form input {
+  display: block;
+  width: 100%;
+  margin: 10px auto;
 }
